--- a/pages/subpages/mine/withdraw/index.wxml
+++ b/pages/subpages/mine/withdraw/index.wxml
@@ -13,17 +13,17 @@
   <view class="amount">{{NUM.toFixed(amount, 2)}}</view>
 
   <view class="fee-card">
-    <view class="fee-item" wx:if="{{curOptionIdx !== 0 && (scene === 2 || scene === 3 || scene === 8)}}">
+    <view class="fee-item" wx:if="{{pathOptions[curOptionIdx].value !== 3 && (scene === 2 || scene === 3 || scene === 8)}}">
       <view class="fee-label">税费（费率6%）</view>
       <view class="fee-amount">¥{{NUM.toFixed(taxFee, 2)}}</view>
     </view>
-    <view class="fee-item" wx:if="{{curOptionIdx !== 0}}">
+    <view class="fee-item" wx:if="{{pathOptions[curOptionIdx].value !== 3}}">
       <view class="fee-label">提现手续费（费率0.6%）</view>
       <view class="fee-amount">¥{{NUM.toFixed(handlingFee, 2)}}</view>
     </view>
     <view class="fee-item">
       <view class="fee-label">实际到账</view>
-      <view class="fee-amount reality">¥{{NUM.toFixed(curOptionIdx !== 0 ? actualAmount : amount, 2)}}</view>
+      <view class="fee-amount reality">¥{{NUM.toFixed(pathOptions[curOptionIdx].value !== 3 ? actualAmount : amount, 2)}}</view>
     </view>
   </view>
 
@@ -36,9 +36,16 @@
         <image class="selected-icon" src="./images/{{curOptionIdx === index ? 'selected' : 'unselected'}}.png" />
       </view>
     </view>
-    <view class="bind-bank-tips row" bindtap="bindBank">
-      <view>{{bancCardInfo ? bancCardInfo.bankName + '（' + bancCardInfo.code + '） 更换'  : '尚未绑定银行卡账号 去绑定'}}</view>
-      <image class="arrow" src="./images/more.png" />
+    <view class="bind-bank-tips row top">
+      <view class="bank-info" wx:if="{{bancCardInfo}}">
+        <view class="omit single">{{bancCardInfo.bankName}}</view>
+        <view>{{'(' + bancCardInfo.code + ')'}}</view>
+      </view>
+      <view wx:if="{{!bancCardInfo}}">尚未绑定银行卡账号</view>
+      <view class="bind-btn row" wx:if="{{scene === 1 || scene === 2 || scene === 3 || scene === 8}}" bindtap="bindBank">
+        <view>{{bancCardInfo ? "更换" : "去绑定"}}</view>
+        <image class="arrow" src="./images/more.png" />
+      </view>
     </view>
     <textarea class="remark" style="font-size: 24rpx;" value="{{remark}}" bindinput="setRemark" maxlength="32" placeholder="添加备注，最多32个字" />
   </view>
@@ -46,9 +53,14 @@
   <view class="withdraw-tips">
     <view>提现说明：</view>
     <view class="withdraw-tip">提现金额必须大于1元，单笔最高可提现3万</view>
-    <view class="withdraw-tip" wx:if="{{curOptionIdx !== 0 && (scene === 2 || scene === 3 || scene === 8)}}">提现金额为税前收入，每笔提现按照第三方代扣代缴综合税费6%收取</view>
-    <view class="withdraw-tip" wx:if="{{curOptionIdx !== 0}}">提现手续费每笔按0.6%收取</view>
-    <view class="withdraw-tip" wx:if="{{curOptionIdx !== 0}}">
+    <view 
+      class="withdraw-tip" 
+      wx:if="{{pathOptions[curOptionIdx].value !== 3 && (scene === 2 || scene === 3 || scene === 8)}}"
+    >
+      提现金额为税前收入，每笔提现按照第三方代扣代缴综合税费6%收取
+    </view>
+    <view class="withdraw-tip" wx:if="{{pathOptions[curOptionIdx].value !== 3}}">提现手续费每笔按0.6%收取</view>
+    <view class="withdraw-tip" wx:if="{{pathOptions[curOptionIdx].value !== 3}}">
       <text>实际到账金额 = 提现金额 </text>
       <text wx:if="{{scene === 2 || scene === 3 || scene === 8}}">- 综合税费</text>
       <text>- 手续费。举例：提现1000元，</text>
