--- a/pages/subpages/mine/components/goods-item/index.wxml
+++ b/pages/subpages/mine/components/goods-item/index.wxml
@@ -1,4 +1,4 @@
-<view class="goods-item" bindtap="navToGoodsDetail">
+<view class="goods-item row" bindtap="navToGoodsDetail">
   <image class="goods-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
   <view class="goods-content">
     <view class="goods-name omit">{{item.name}}</view>
