--- a/pages/subpages/mall/components/evaluation-item/index.wxss
+++ b/pages/subpages/mall/components/evaluation-item/index.wxss
@@ -31,18 +31,23 @@
 .comment-content {
   margin-top: 18rpx;
   color: #333;
-  font-size: 24rpx;
+  font-size: 26rpx;
 }
-.comment-images {
+
+.comment-images-wrap {
   position: relative;
   margin-top: 18rpx;
-  border-radius: 8rpx;
   overflow: hidden;
+  border-radius: 8rpx;
 }
 .comment-image {
-  width: 214rpx;
-  height: 214rpx;
-  border-radius: 8rpx;
+  margin-right: 18rpx;
+  width: 206rpx;
+  height: 206rpx;
+  border-radius: 16rpx;
+}
+.comment-image:last-child {
+  margin-right: 0;
 }
 .more-image-tips {
   position: absolute;
