--- a/pages/subpages/components/spec-popup/index.wxml
+++ b/pages/subpages/components/spec-popup/index.wxml
@@ -30,7 +30,7 @@
         <view class="spec-content row" wx:if="{{!couponDiscount}}">
           <text wx:if="{{receivedCouponList.length}}">未达优惠使用门槛</text>
           <text wx:if="{{!receivedCouponList.length}}" catchtap="showCouponPopup">领取优惠券</text>
-          <image class="spec-content-arrow" wx:if="{{!receivedCouponList.length}}" catchtap="showCouponPopup" src="/images/arrow.png" />
+          <image class="spec-content-arrow" wx:if="{{!receivedCouponList.length}}" catchtap="showCouponPopup" src="/images/arrow_gray.png" />
         </view>
       </view>
       <view class="spec-list row between">
