--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -190,9 +190,9 @@ page {
   line-height: 1;
 }
 .market-price {
-  margin-left: 16rpx;
+  margin-left: 12rpx;
   color: #959595;
-  font-size: 28rpx;
+  font-size: 30rpx;
   text-decoration: line-through;
 }
 
@@ -222,8 +222,54 @@ page {
   text-align: right;
 }
 
-.goods-name {
+.coupon-wrap {
   margin-top: 18rpx;
+}
+.coupon-list {
+  flex: 1;
+}
+.coupon {
+  margin-right: 12rpx;
+  width: fit-content;
+  color: #FF4747;
+  font-size: 18rpx;
+  border-radius: 8rpx;
+  border: 1px solid #FF4747;
+}
+.coupon-title {
+  padding: 2rpx 8rpx;
+  border-right: 1px dotted #FF4747;
+}
+.coupon-content {
+  padding: 2rpx 8rpx;
+}
+
+.receive-btn {
+  display: flex;
+  align-items: center;
+  padding-left: 12rpx;
+  padding-right: 10rpx;
+  height: 36rpx;
+  color: #fff;
+  font-size: 20rpx;
+  font-weight: 550;
+  background: linear-gradient( 135deg, #FFA266 0%, #FF3D39 64%, #FF3636 100%);
+  border-radius: 18rpx;
+  animation: breathe 0.8s ease alternate infinite;
+}
+.receive-btn-arrow {
+  margin-left: 4rpx;
+  width: 22rpx;
+  height: 22rpx;
+}
+@keyframes breathe {
+  0%{ transform: scale(.97); }
+  50%{ transform: scale(1.1); }
+  100%{ transform: scale(.97); }
+}
+
+.goods-name {
+  margin-top: 24rpx;
   color: #141925;
   font-size: 32rpx;
   font-weight: 600;
@@ -236,7 +282,7 @@ page {
   height: 34rpx;
 }
 .goods-intro {
-  margin-top: 18rpx;
+  margin-top: 12rpx;
   color: var(--blue-1);
   font-size: 24rpx;
 }
@@ -439,6 +485,14 @@ page {
   margin-left: 12rpx;
   color: #fff;
   background: var(--blue-1);
+}
+
+.coupon-tips {
+  font-size: 20rpx;
+}
+.coupon-price {
+  margin-top: 8rpx;
+  font-size: 24rpx;
 }
 
 .invalid-notice-btn {
