--- a/pages/subpages/mall/goods/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxss
@@ -344,6 +344,13 @@
   border-bottom: none;
 }
 
+.arrow {
+  margin-left: 6rpx;
+  margin-right: -6rpx;
+  width: 24rpx;
+  height: 24rpx;
+}
+
 .balance {
   color: #333;
   font-size: 28rpx;
