--- a/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
@@ -88,6 +88,13 @@
       <view class="title">运费</view>
       <price-unit price="{{orderInfo.freightPrice || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
     </view>
+    <view class="list row between" wx:if="{{orderInfo.couponDenomination}}">
+      <view class="title">优惠券抵扣</view>
+      <view class="row">
+        <text>-</text>
+        <price-unit price="{{orderInfo.couponDenomination}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
+      </view>
+    </view>
     <view class="list row between" wx:if="{{orderInfo.deductionBalance}}">
       <view class="title">余额抵扣</view>
       <view class="row">
