--- a/pages/subpages/mall/goods/subpages/goods-detail/components/coupon-item/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/coupon-item/index.wxml
@@ -33,6 +33,6 @@
   </view>
   <view class="coupon-desc">
     <text>{{item.description}}</text>
-    <text wx:if="{{item.receiveNumLimit}}">，每人限领{{item.receiveNumLimit}}张</text>
+    <text wx:if="{{item.receiveLimit}}">，每人限领{{item.receiveLimit}}张</text>
   </view>
 </view>
