--- a/pages/subpages/mall/goods/index.wxss
+++ b/pages/subpages/mall/goods/index.wxss
@@ -101,6 +101,8 @@
 
 .goods-list-wrap {
   padding: 20rpx;
+  min-height: 100vh;
+  background: #fff;
 }
 
 .sub-category-tabs {
@@ -112,10 +114,10 @@
   margin-right: 22rpx;
   margin-bottom: 20rpx;
   width: 160rpx;
-  height: 50rpx;
-  color: #999;
+  height: 60rpx;
+  color: #333;
   font-size: 24rpx;
-  background: #e9e9e9;
+  background: #f3f3f3;
   border-radius: 12rpx;
 }
 .sub-category-tab:nth-child(4n) {
@@ -124,5 +126,5 @@
 .sub-category-tab.active {
   color: var(--blue-1);
   font-weight: 550;
-  background: #dce7ff;
+  background: #C6EFFF;
 }
