--- a/pages/subpages/mine/address/subpages/add/index.wxml
+++ b/pages/subpages/mine/address/subpages/add/index.wxml
@@ -2,26 +2,25 @@
   <view class="card-title">智能地址填写</view>
   <textarea class="filling-area" bindinput="textInput" value="{{text}}" rows="5" cols="40" placeholder="粘贴整段地址自动识别姓名、电话和地址" />
   <view class="btns-wrap">
-    <view class="text-btns">
-      <view class="clear-btn" bindtap="clearText">清空</view>
-      <view class="submit-btn" bindtap="recognizeText">识别</view>
-    </view>
+    <view class="submit-btn" bindtap="recognizeText">识别</view>
+    <view class="clear-btn" bindtap="clearText">清空</view>
   </view>
 </view>
 
 <view class="card">
   <view class="info-list row">
-    <label class="title">收货人: </label>
+    <label class="title">收货人</label>
     <input class="content" value="{{name}}" bindinput="setName" placeholder="收货人姓名" placeholder-style="color: #999;"/>
   </view>
   <view class="info-list row">
-    <label class="title">手机号: </label>
+    <label class="title">手机号</label>
     <input class="content" value="{{mobile}}" bindinput="setMobile" type="number" placeholder="请输入手机号" placeholder-style="color: #999;"/>
   </view>
   <view class="info-list row">
-    <label class="title">省市区: </label>
+    <label class="title">省市区</label>
     <picker 
       class="content {{regionDesc ? '' : 'placeholder'}}" 
+      value="{{addressInfo.regionCodeList}}"
       bindchange="selectRegion" 
       mode="region"
     >
@@ -29,14 +28,14 @@
     </picker>
   </view>
   <view class="info-list row">
-    <label class="title">详细地址: </label>
+    <label class="title">详细地址</label>
     <input class="content" value="{{addressDetail}}" bindinput="setAddressDetail" placeholder='如街道，楼层、门牌号' placeholder-style="color: #999;"/>
   </view>
 </view>
 
 <view class="card">
   <view class="info-list row between">
-    <label class="title">设为默认: </label>
+    <label class="title">设为默认</label>
     <switch style="transform: scale(0.8)" bindchange="toggleDefaultValue" color="#F5701D" />
   </view>
 </view>
