--- a/pages/subpages/mine/address/subpages/add/index.wxss
+++ b/pages/subpages/mine/address/subpages/add/index.wxss
@@ -1,39 +1,42 @@
 .card-title {
   color: #333;
   font-size: 28rpx;
+  font-weight: 500;
 }
+
 .filling-area {
   margin-top: 24rpx;
-  padding: 12rpx;
+  padding: 24rpx;
   width: 100%;
-  height: 240rpx;
+  height: 280rpx;
   font-size: 26rpx;
   box-sizing: border-box;
-  border-radius: 12rpx;
-  border: 1rpx solid #dbdbdb;
+  border-radius: 18rpx;
+  border: 0.5px solid #eee;
 }
+
 .btns-wrap {
   display: flex; 
-  justify-content: flex-end; 
   align-items: center;
+  justify-content: space-around;
   margin-top: 24rpx;
 }
-.text-btns {
+.clear-btn, .submit-btn {
   display: flex;
   align-items: center;
+  justify-content: center;
+  width: 240rpx;
+  height: 68rpx;
   font-size: 26rpx;
-}
-.clear-btn, .submit-btn {
-  padding: 3px 10px;
+  border-radius: 34rpx;
 }
 .clear-btn {
-  margin-right: 10rpx;
   color: #333;
+  background: #f3f3f3;
 }
 .submit-btn {
   color: #fff;
   background: var(--blue-1);
-  border-radius: 5px;
 }
 
 .card {
@@ -47,13 +50,14 @@
   height: 100rpx;
   color: #333;
   font-size: 28rpx;
-  border-bottom: 1rpx solid #e5e5e5;
+  border-bottom: 0.5px solid #eee;
 }
 .info-list:last-child {
   border: none;
 }
 .title {
   width: 160rpx;
+  font-weight: 500;
 }
 .content {
   flex: 1;
@@ -68,10 +72,11 @@
   left: 50%;
   bottom: calc(24rpx + env(safe-area-inset-bottom));
   transform: translateX(-50%);
-  width: 712rpx;
-  height: 80rpx;
+  width: calc(100vw - 48rpx);
+  height: 88rpx;
   color: #fff;
-  font-size: 28rpx;
-  border-radius: 40rpx;
+  font-size: 30rpx;
+  font-weight: bold;
+  border-radius: 44rpx;
   background: var(--blue-1);
 }
