--- a/pages/subpages/mine/address/subpages/edit/index.wxml
+++ b/pages/subpages/mine/address/subpages/edit/index.wxml
@@ -1,14 +1,14 @@
 <view class="card">
   <view class="info-list row">
-    <label class="title">收货人: </label>
+    <label class="title">收货人</label>
     <input class="content" value="{{addressInfo.name}}" bindinput="setName" placeholder="收货人姓名" placeholder-style="color: #999;"/>
   </view>
   <view class="info-list row">
-    <label class="title">手机号: </label>
+    <label class="title">手机号</label>
     <input class="content" value="{{addressInfo.mobile}}" bindinput="setMobile" type="number" placeholder="请输入手机号" placeholder-style="color: #999;"/>
   </view>
   <view class="info-list row">
-    <label class="title">省市区: </label>
+    <label class="title">省市区</label>
     <picker 
       class="content {{addressInfo.regionDesc ? '' : 'placeholder'}}" 
       value="{{addressInfo.regionCodeList}}"
@@ -19,14 +19,14 @@
     </picker>
   </view>
   <view class="info-list row">
-    <label class="title">详细地址: </label>
+    <label class="title">详细地址</label>
     <input class="content" value="{{addressInfo.addressDetail}}" bindinput="setAddressDetail" placeholder='如街道，楼层、门牌号' placeholder-style="color: #999;"/>
   </view>
 </view>
 
 <view class="card">
   <view class="info-list row between">
-    <label class="title">设为默认: </label>
+    <label class="title">设为默认</label>
     <switch style="transform: scale(0.8)" checked="{{addressInfo.isDefault}}" bindchange="toggleDefaultValue" color="#09AFFF" />
   </view>
 </view>
