--- a/pages/subpages/components/address-popup/index.wxss
+++ b/pages/subpages/components/address-popup/index.wxss
@@ -1,14 +1,17 @@
 .address-select-popup {
   padding: 24rpx;
+  padding-bottom: calc(24rpx + env(safe-area-inset-bottom));
   background: #f5f6f8;
 }
 
 .title {
+  padding-left: 80rpx;
   color: #333;
   font-size: 32rpx;
   font-weight: 550;
 }
 .add-btn {
+  width: 80rpx;
   color: var(--blue-1);
   font-size: 28rpx;
 }
@@ -60,9 +63,10 @@
 }
 
 .confirm-btn {
-  height: 80rpx;
+  height: 88rpx;
   color: #fff;
-  font-size: 28rpx;
-  border-radius: 40rpx;
+  font-size: 30rpx;
+  font-weight: 500;
+  border-radius: 44rpx;
   background: var(--blue-1);
 }
