--- a/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/goods-order/subpages/order-detail/index.wxml
@@ -75,16 +75,16 @@
       <view class="title">商品总价</view>
       <price-unit price="{{orderInfo.goodsPrice || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
     </view>
-    <view class="list row between" wx:if="{{orderInfo.deliveryMode === 1}}">
-      <view class="title">运费</view>
-      <price-unit price="{{orderInfo.freightPrice || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
-    </view>
     <view class="list row between" wx:if="{{orderInfo.couponDenomination}}">
       <view class="title">优惠券抵扣</view>
       <view class="row">
         <text>-</text>
         <price-unit price="{{orderInfo.couponDenomination}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
       </view>
+    </view>
+    <view class="list row between" wx:if="{{orderInfo.deliveryMode === 1}}">
+      <view class="title">运费</view>
+      <price-unit price="{{orderInfo.freightPrice || 0}}" color="#333" fontSize="20rpx" integerFontSize="28rpx" />
     </view>
     <view class="list row between" wx:if="{{orderInfo.deductionBalance}}">
       <view class="title">余额抵扣</view>
@@ -103,28 +103,32 @@
     </view>
     <view class="more-info-wrap">
       <view class="list row between">
-        <view class="title">订单编号：</view>
+        <view class="title">订单编号</view>
         <view>
           <text>{{orderInfo.orderSn}}</text>
           <text>｜</text>
           <text style="color: #333" bindtap="copyOrderSn">复制</text>
         </view>
       </view>
+      <view class="list row between">
+        <view class="title">创建时间</view>
+        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
+      </view>
       <view class="list row between" wx:if="{{orderInfo.payTime}}">
-        <view class="title">付款时间：</view>
+        <view class="title">付款时间</view>
         <text>{{TIME.transform(orderInfo.payTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
       <view class="list row between" wx:if="{{orderInfo.shipTime}}">
-        <view class="title">发货时间：</view>
+        <view class="title">发货时间</view>
         <text>{{TIME.transform(orderInfo.shipTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
       <view class="list row between" wx:if="{{orderInfo.confirmTime}}">
-        <view class="title">成交时间：</view>
+        <view class="title">成交时间</view>
         <text>{{TIME.transform(orderInfo.confirmTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
-      <view class="list row between">
-        <view class="title">创建时间：</view>
-        <text>{{TIME.transform(orderInfo.createdAt, 'YYYY-MM-DD hh:mm:ss')}}</text>
+      <view class="list row between" wx:if="{{orderInfo.refundTime}}">
+        <view class="title">退款时间</view>
+        <text>{{TIME.transform(orderInfo.refundTime, 'YYYY-MM-DD hh:mm:ss')}}</text>
       </view>
     </view>
   </view>
