feat: 列表末尾项样式

--- a/components/goods-item-strip/index.wxss
+++ b/components/goods-item-strip/index.wxss
@@ -39,8 +39,8 @@
   padding: 24rpx 0;
   border-bottom: 1px solid #f5f6f8;
 }
-.goods-item.show-border {
-  border-bottom: 1px solid #f5f6f8;
+.goods-item.is-last {
+  border-bottom: none;
 }
 
 .goods-cover {
