--- a/components/restaurant-item-strip/index.wxss
+++ b/components/restaurant-item-strip/index.wxss
@@ -39,8 +39,8 @@
   padding: 24rpx 0;
   border-bottom: 1px solid #f5f6f8;
 }
-.restaurant.show-border {
-  border-bottom: 1px solid #f5f6f8;
+.restaurant.is-last {
+  border-bottom: none;
 }
 .main {
   display: flex;
