--- a/components/scenic-item-strip/index.wxss
+++ b/components/scenic-item-strip/index.wxss
@@ -17,9 +17,10 @@
   align-items: center;
   padding: 24rpx 0;
   font-size: 0;
-}
-.scenic.show-border {
   border-bottom: 1px solid #f5f6f8;
+}
+.scenic.is-last {
+  border-bottom: none;
 }
 .cover {
   width: 220rpx;
