--- a/pages/subpages/common/promoter/components/evaluation-item/index.wxss
+++ b/pages/subpages/common/promoter/components/evaluation-item/index.wxss
@@ -1,8 +1,9 @@
 .evaluation-item {
   padding: 32rpx 0;
+  border-bottom: 0.5px solid #eee;
 }
-.evaluation-item.show-border {
-  border-top: 0.5px solid #eee;
+.evaluation-item.is-last {
+  border-bottom: none;
 }
 
 .user-avatar {
